--- a/prep_wepp_inputs/CMIP5_to_CLI/download_ftp.ipynb
+++ b/prep_wepp_inputs/CMIP5_to_CLI/download_ftp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,16 +10,18 @@
      "output_type": "stream",
      "text": [
       "Connected to gdo-dcp.ucllnl.org...\n",
-      "Downloading files from /pub/dcp/subset/202108231014Nl5l_n_Qc3tYr...\n",
-      "0TAG:GO1_LOCA_Obs\n",
+      "Downloading files from /pub/dcp/subset/202112011100Nr5d_n_DtgiWu...\n",
+      "0TAG:ST1_BCCA\n",
+      "202112011100Nr5d_n_DtgiWu.txt\n",
+      "Notes.txt\n",
+      "Projections5.txt\n",
       "Extraction_pr.nc\n",
       "Extraction_tasmax.nc\n",
       "Extraction_tasmin.nc\n",
       "MetaData.txt\n",
       "Notes.txt\n",
-      "1_16obs.tar.gz\n",
-      "202108231014Nl5l_n_Qc3tYr.txt\n",
-      "Notes.txt\n",
+      "Projections5.txt\n",
+      "bcca5.tar.gz\n",
       "Download complete.\n"
      ]
     }
@@ -278,8 +280,15 @@
     "        # Call the download processor\n",
     "        download_dcp_subset_results(ID, output_path)\n",
     "        \n",
-    "run_ftp_download('202108231014Nl5l_n_Qc3tYr', 'C:\\\\Users\\\\Garner\\\\Soil_Erosion_Project\\\\GO1_field_test\\\\climate_files\\\\LOCA_obs')"
+    "run_ftp_download('202112011100Nr5d_n_DtgiWu', 'C:\\\\Users\\\\Garner\\\\Soil_Erosion_Project\\\\WEPP_PRWs\\\\ST1\\\\netCDF\\\\BCCA')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
